--- a/project0/html/styles.css
+++ b/project0/html/styles.css
@@ -53,3 +53,7 @@ input[type='submit'] {
 input[type='submit']:hover {
   cursor: pointer;
 }
+
+input.remove-item {
+  background-color: transparent;
+}
